Files_before_restart/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      # Ensure www-data (uid 33) can write to /var/www/html on EFS/EBS
      securityContext:
        fsGroup: 33
      # <-- add here!
      containers:
        - name: nextcloud
          image: nextcloud:31.0.4-apache
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nextcloud-html
              mountPath: /var/www/html
      volumes:
        - name: nextcloud-html
          persistentVolumeClaim:
            claimName: nextcloud-html
