Files_before_restart/fix-perms.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fix-nextcloud-permissions
  namespace: nextcloud
spec:
  containers:
    - name: fixer
      image: busybox
      command: ["sh", "-c", "chown -R 33:33 /var/www/html"]
      volumeMounts:
        - name: nextcloud-html
          mountPath: /var/www/html
      securityContext:
        runAsUser: 0
        runAsGroup: 0
  restartPolicy: Never
  volumes:
    - name: nextcloud-html
      persistentVolumeClaim:
        claimName: nextcloud-html
