Files_before_restart/statefulset-mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-mariadb
  namespace: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud-mariadb
  serviceName: "nextcloud-mariadb"
  replicas: 1
  template:
    metadata:
      labels:
        app: nextcloud-mariadb
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: mariadb
        image: mariadb:11.4
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
        - name: initdb
          mountPath: /docker-entrypoint-initdb.d/
          readOnly: true
      volumes:
      - name: initdb
        configMap:
          name: mariadb-init-script
          items:
            - key: init.sql
              path: init.sql
  volumeClaimTemplates:
  - metadata:
      name: mariadb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
      storageClassName: gp2
