Files_before_restart/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mariadb
  namespace: nextcloud
spec:
  clusterIP: None
  selector:
    app: nextcloud-mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
