Files_before_restart/turn-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-talk-turn-udp
  namespace: nextcloud
spec:
  selector:
    app: nextcloud-talk-hpb
  ports:
    - name: turn-udp
      port: 3478
      targetPort: 3478
      protocol: UDP
  type: LoadBalancer
