Files_before_restart/collabora-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collabora
  namespace: collabora
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - collabora.ewe-netz-backup.de
      secretName: collabora-tls
  rules:
    - host: collabora.ewe-netz-backup.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collabora-online
                port:
                  number: 9980
